removed Collections.emptyList()